--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@formspree/react": "^3.0.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.19",
     "aos": "^2.3.4",
