--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@formspree/react": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.19",
     "aos": "^2.3.4",
